--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.5",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
     "next": "14.0.4",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
